--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node anatomy_scraper.ts",
+    "start": "ts-node ./src/index.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.6.5",
     "cheerio": "^1.0.0-rc.12",
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
